[fix] toggle spacing on table accordions

--- a/assets/scss/shared-ui/_accordions.scss
+++ b/assets/scss/shared-ui/_accordions.scss
@@ -431,6 +431,10 @@
 					th, td {
 						transition: background-color 0.3s;
 
+						&.sui-table-item-title .sui-toggle .sui-toggle-slider {
+							margin-right: 10px;
+						}
+
 						&.sui-table-item-title .sui-accordion-open-indicator {
 
 							[class*="sui-icon-"] {
